# Titanic_Kaggle_2024

titanic/: pyproject.toml
titanic/titanic/: titanic_analise_exploratoria.ipynb
